package swimworkoutbuilder.model.enums;

public enum StrokeType {
    FREESTYLE,
    BACKSTROKE,
    BREASTSTROKE,
    BUTTERFLY,
    INDIVIDUAL_MEDLEY,
    FREE_KICK,
    DRILL
}
